--- a/README
+++ b/README
@@ -2,6 +2,8 @@ This is the best FAIL app on the market.  Press the blue button for the familiar
 
 Based on the website http://www.bombombombomwooooo.com by PacDude Games.
 
+UPDATE: Apple rejected this app due to "lack of user functionality" so it isn't even on the market.  The Android version is up though.
+
 LICENSE
 
 You are free:
